# vs-cmake-remote-docker

./: .dockerignore  .gitignore  dev-docker-compose.yml  dev.Dockerfile  readme.md
cpp-sandbox/: CMakeLists.txt  CMakeSettings.json
cpp-sandbox/cpp-sandbox/: CMakeLists.txt  cpp-sandbox.cpp
